--- a/cn/index.html
+++ b/cn/index.html
@@ -32,8 +32,8 @@
 <script type="text/javascript" src="index.js"></script>
 
 <footer id="footer">
-  <p>想把你的mod分享在这个平台上吗？请在<a href="https://github.com/cdda-base/cdda-base.github.io">https://github.com/cdda-base/cdda-base.github.io</a>上提交你的mod！也欢迎大佬来给本站升级哦！</p>
-	<p>想加入网站维护组加Q群：<a href="//shang.qq.com/wpa/qunwpa?idkey=cafb68543cf8d6fe65e9e12e253d49239a6653f951b9d92d5fcfde47413172bb">1017727349</a></p>
+  
+	<p>想参与网站维护请加Q群：<a href="//shang.qq.com/wpa/qunwpa?idkey=cafb68543cf8d6fe65e9e12e253d49239a6653f951b9d92d5fcfde47413172bb">1017727349</a>，欢迎大佬的到来，目前招募新版测试者，网页设计大佬，mod制作者，mod测试者</p>
 </footer>
 </body>
 </html>
