--- a/cn/index.html
+++ b/cn/index.html
@@ -28,7 +28,7 @@
   </div>
 	<div id="changepage"></div>
 </div>
-<script type="text/javascript" src="../../modspage/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="../../jquery.js"></script>
 <script type="text/javascript" src="index.js"></script>
 
 <footer id="footer">
