--- a/cn/index.html
+++ b/cn/index.html
@@ -32,7 +32,17 @@
 <script type="text/javascript" src="index.js"></script>
 
 <footer id="footer">
-  
+<script async src="//cdn.jsdelivr.net/npm/busuanzi/bsz.pure.mini.js"></script>
+	<p>
+<span id="busuanzi_container_page_pv" style='display:none'>
+本页总阅读量<span id="busuanzi_value_page_pv"></span>次</span>
+<br>
+<span id="busuanzi_container_site_pv" style='display:none'>本站总访问量<span id="busuanzi_value_site_pv"></span>次</span>
+<br>
+<span id="busuanzi_container_site_uv" style='display:none'>
+ 本站总访客数<span id="busuanzi_value_site_uv"></span>人次
+</span>	
+<br></p>  
 	<p>想参与网站维护请加Q群：<a href="//shang.qq.com/wpa/qunwpa?idkey=cafb68543cf8d6fe65e9e12e253d49239a6653f951b9d92d5fcfde47413172bb">1017727349</a>，欢迎大佬的到来，目前招募新版测试者，网页设计大佬，mod制作者，mod测试者</p>
 </footer>
 </body>
